objects/Contact.object
<CustomObject>
    <fields>
        <fullName>ABM_Key_Account_Current__c</fullName>
        <formula>Account.ABM_Key_Account_Current__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Populates from the associated Account record.</inlineHelpText>
        <label>ABM Key Account Current</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>AB_Bank__c</fullName>
        <label>AB Bank</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>AEP_Member__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Check box for indicating if the contact has an active AEP license</description>
        <label>AEP Member</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>AR_End_User__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>Check if ARM/Vault End User.</inlineHelpText>
        <label>AR End User</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Accelerate_Modules__c</fullName>
        <inlineHelpText>This field is used in the Website - Plans - Request a Quote Form.</inlineHelpText>
        <label>Accelerate Modules</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Account_Customer_Status__c</fullName>
        <formula>Account.Customer_Status__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Populates Customer Status from teh associated Account record.</inlineHelpText>
        <label>Account Customer Status</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Account_Industry__c</fullName>
        <description>Pardot Dynamic Content will only pick the prospects fields as variants. Hence created this field, to have the industry field as a variant for sending emails to the contacts.</description>
        <formula>TEXT(Account.Industry)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Populates from respective Account. Please edit the account to change it.</inlineHelpText>
        <label>Account Industry</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Account_Type__c</fullName>
        <description>Created this field for setting the Automation and Segmentation rules in Pardot.</description>
        <formula>TEXT(Account.Account_Type__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Populates from respective Account. Edit the account to change it.</inlineHelpText>
        <label>Account Type</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>AutoRABIT_Foundation__c</fullName>
        <inlineHelpText>This field is used in the Website - Plans - Request a Quote Form.</inlineHelpText>
        <label>AutoRABIT Foundation</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>AutoRABIT_Foundation</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>AutoRABIT_Products__c</fullName>
        <inlineHelpText>This field is used in the Website - Plans - Request a Quote Form.</inlineHelpText>
        <label>AutoRABIT Products</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>AutorabitExtId__c</fullName>
        <description>External Id created by AutoRABIT</description>
        <externalId>true</externalId>
        <label>AutorabitExtId__c</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Call_Disposition__c</fullName>
        <inlineHelpText>Call Result from Orum.</inlineHelpText>
        <label>Call Disposition</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Champion__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Champion</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>CodeScan_Org_Id__c</fullName>
        <externalId>true</externalId>
        <label>CodeScan Org Id</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Company_URL__c</fullName>
        <label>Company URL</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>Contact_Name__c</fullName>
        <complianceGroup>GDPR</complianceGroup>
        <formula>FirstName+&quot; &quot;+LastName</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Contact Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Contact_Rating__c</fullName>
        <label>Contact Rating</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Hot</fullName>
                </value>
                <value>
                    <fullName>Warm</fullName>
                </value>
                <value>
                    <fullName>Cold</fullName>
                </value>
                <value>
                    <fullName>Not Ready</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Contact_Role__c</fullName>
        <label>Contact Role</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Decision Maker</fullName>
                </value>
                <value>
                    <fullName>Influencer</fullName>
                </value>
                <value>
                    <fullName>End-User</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Contact_Source_Strikedeck__c</fullName>
        <defaultValue>false</defaultValue>
        <description>This field has a two-way sync enabled from Strikedeck. Checked means this contact came from Strikedeck</description>
        <label>Contact Source_Strikedeck</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Contact_Stage__c</fullName>
        <label>Contact Stage</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Nurture</fullName>
                </value>
                <value>
                    <fullName>Lost</fullName>
                </value>
                <value>
                    <fullName>Open</fullName>
                    <default>true</default>
                    <label>Open</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Contact_Status__c</fullName>
        <label>Contact Status</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>1-Lead</fullName>
                    <default>true</default>
                    <label>1-Lead</label>
                </value>
                <value>
                    <fullName>2-Subscriber</fullName>
                </value>
                <value>
                    <fullName>4-MQL</fullName>
                </value>
                <value>
                    <fullName>5-Intro Call Scheduled</fullName>
                </value>
                <value>
                    <fullName>6-Intro Call Held</fullName>
                </value>
                <value>
                    <fullName>3-Prospect</fullName>
                    <isActive>false</isActive>
                    <label>3-Prospect</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Contact_Type__c</fullName>
        <label>Contact Type</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Inbound</fullName>
                </value>
                <value>
                    <fullName>Outbound</fullName>
                </value>
                <value>
                    <fullName>ABM</fullName>
                </value>
                <value>
                    <fullName>Partner</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Current_Sequence_Name__c</fullName>
        <defaultValue>&quot;None&quot;</defaultValue>
        <inlineHelpText>Field mapped to Outreach.io Currently Active Sequence Name.</inlineHelpText>
        <label>Current Sequence Name</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Current_Sequence_Status__c</fullName>
        <inlineHelpText>Field mapped to Outreach.io Currently Active Sequence Status.</inlineHelpText>
        <label>Current Sequence Status</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Current_Sequence_User_Name__c</fullName>
        <inlineHelpText>Field mapped to Outreach.io Current Sequence User Name.</inlineHelpText>
        <label>Current Sequence User Name</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>DC_Completed_Date_Vault__c</fullName>
        <inlineHelpText>DC Completed Date for Vault</inlineHelpText>
        <label>DC Completed Date (Vault)</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>DC_Completed_Date__c</fullName>
        <label>DC Completed Date (CI/CD)</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>DC_Scheduled_Date_Vault__c</fullName>
        <inlineHelpText>DC Scheduled Date to be captured for VAULT</inlineHelpText>
        <label>DC Scheduled On (Vault)</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>DC_Scheduled_Date__c</fullName>
        <label>DC Scheduled On (CI/CD)</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>DOZISF__ZoomInfo_Company_ID__c</fullName>
        <label>ZoomInfo Company ID</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>DOZISF__ZoomInfo_Enrich_Status__c</fullName>
        <label>ZoomInfo Enrich Status</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Company Enrich Only</fullName>
                </value>
                <value>
                    <fullName>Enriched</fullName>
                </value>
                <value>
                    <fullName>Error</fullName>
                </value>
                <value>
                    <fullName>No-Match</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>DOZISF__ZoomInfo_First_Updated__c</fullName>
        <description>Date and time when the record was first created or updated by ZoomInfo</description>
        <label>ZoomInfo First Updated</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>DOZISF__ZoomInfo_Id__c</fullName>
        <externalId>true</externalId>
        <label>ZoomInfo Contact ID</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>DOZISF__ZoomInfo_InboxAI_ID__c</fullName>
        <externalId>true</externalId>
        <label>ZoomInfo InboxAI ID</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>DOZISF__ZoomInfo_Last_Updated__c</fullName>
        <description>Date and time when the record was last created or updated by ZoomInfo</description>
        <label>ZoomInfo Last Updated</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>DOZISF__ZoomInfo_Non_Matched_Reason__c</fullName>
        <label>ZoomInfo Non-Matched Reason</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Data_Quality_Description__c</fullName>
        <formula>IF( Data_Quality_Score__c =100,&quot;All Contact Details Captured&quot;, &quot;Missing: &quot;&amp;IF( LEN( Phone ) = 0, &quot;Phone, &quot;,&quot;&quot;)&amp;&quot;&quot;&amp;IF(LEN( Email) = 0, &quot;Email, &quot;,&quot;&quot;)&amp;&quot;&quot;&amp;IF( LEN( MailingStreet ) = 0, &quot;Complete Address, &quot;,&quot;&quot;)&amp;&quot;&quot;&amp;IF( LEN(Title) = 0, &quot;Job Title, &quot;,&quot;&quot;)&amp;&quot;&quot;&amp;IF( ISPICKVAL( Salutation,&quot;&quot;), &quot;Salutation&quot;,&quot;&quot;))</formula>
        <label>Data Quality Description</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Data_Quality_Score__c</fullName>
        <formula>IF( LEN( Phone) = 0, 0,20) + IF( LEN( Email) = 0, 0,20) + IF( LEN(MailingStreet) = 0, 0,20) + IF( LEN(Title) = 0, 0,20) + IF( ISPICKVAL(Salutation,&quot;&quot;), 0,20)</formula>
        <label>Data Quality Score</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Date_No_Longer_Customer__c</fullName>
        <description>Churn Date from the associated account.</description>
        <formula>Account.Churn_Intent_Communication_Date__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Date account is churned.</inlineHelpText>
        <label>Date No Longer Customer</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Days_in_1_Lead_Status__c</fullName>
        <description>Created for Reporting Purpose.</description>
        <formula>IF(TEXT(  Contact_Status__c ) = &quot;1-Lead&quot;, Now() - X1_Lead_Status_In__c, X1_Lead_Status_Out__c - X1_Lead_Status_In__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Number of days contact in 1-Lead status.</inlineHelpText>
        <label>Days in 1-Lead Status</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Days_in_2_Subscriber_Status__c</fullName>
        <description>Created for Reporting Purpose.</description>
        <formula>IF(TEXT( Contact_Status__c ) = &quot;2-Subscriber&quot;,  Now() - X2_Subscriber_Status_In__c,  X2_Subscriber_Status_Out__c - X2_Subscriber_Status_In__c  )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Number of days contact in 2-Subscribe status.</inlineHelpText>
        <label>Days in 2-Subscriber Status</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Days_in_3_Prospect_Status__c</fullName>
        <description>Created for Reporting Purpose.</description>
        <formula>IF(TEXT( Contact_Status__c ) = &quot;3-Prospect&quot;, Now() - X3_Prospect_Status_In__c,  X3_Prospect_Status_Out__c - X3_Prospect_Status_In__c )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Number of days contact in 3-Prospect status.</inlineHelpText>
        <label>Days in 3-Prospect Status</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Days_in_4_MQL_Status__c</fullName>
        <description>Created for Reporting Purpose.</description>
        <formula>IF(TEXT( Contact_Status__c ) = &quot;4-MQL&quot;, Now() - X4_MQL_Status_In__c, X4_MQL_Status_Out__c - X4_MQL_Status_In__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Number of days contact in 4-MQL status.</inlineHelpText>
        <label>Days in 4-MQL Status</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Days_in_5_Intro_Call_Scheduled__c</fullName>
        <description>Created for Reporting Purpose.</description>
        <formula>IF(TEXT( Contact_Status__c ) = &quot;5-Intro Call Scheduled&quot;, Now() - X5_Intro_Call_Scheduled_Status_In__c, X5_Intro_Call_Scheduled_Status_Out__c - X5_Intro_Call_Scheduled_Status_In__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Number of days contact in 5-Intro Call Scheduled status.</inlineHelpText>
        <label>Days in 5-Intro Call Scheduled</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Days_in_6_Intro_Call_Held__c</fullName>
        <description>Created for Reporting Purpose.</description>
        <formula>IF(TEXT( Contact_Status__c ) = &quot;6-Intro Call Held&quot;, Now() - X6_Intro_Call_Held_Status_In__c, X6_Intro_Call_Held_Status_Out__c - X6_Intro_Call_Held_Status_In__c )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Number of days contact in 6-Intro Call Held status.</inlineHelpText>
        <label>Days in 6-Intro Call Held</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Decision_Criteria__c</fullName>
        <label>Decision Criteria</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Technical</fullName>
                </value>
                <value>
                    <fullName>Marketing</fullName>
                </value>
                <value>
                    <fullName>Sales</fullName>
                </value>
                <value>
                    <fullName>Service</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Decision_Process__c</fullName>
        <label>Decision Process</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Need Picklist Values</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Delete_From_CRM__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Check if the contact is no longer needed in the CRM.</description>
        <inlineHelpText>Check if the contact is no longer needed in the CRM.</inlineHelpText>
        <label>Delete From CRM</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Demo_Performed_Date_Vault__c</fullName>
        <label>Demo Performed Date (Vault)</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Demo_Performed_Date__c</fullName>
        <label>Demo Performed Date (CI/CD)</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Demo_Scheduled_Date__c</fullName>
        <label>Demo Scheduled Date (CI/CD)</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Do_Not_Contact_del__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Do Not Contact</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Economic_Buyer__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Economic Buyer</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Employees__c</fullName>
        <description>Created this field for Pardot Grading purpose.</description>
        <formula>Account.NumberOfEmployees</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Populates from respective Account. Edit the account to change it.</inlineHelpText>
        <label>Employees</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>First_Call_Attempt__c</fullName>
        <inlineHelpText>Date/Time first Outreach.io activity made for Task Type &quot;Call&quot;.</inlineHelpText>
        <label>First Call Attempt</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>First_Email_Attempt__c</fullName>
        <inlineHelpText>Date/Time first Outreach.io activity made for Task Type &quot;Email&quot;.</inlineHelpText>
        <label>First Email Attempt</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Geography__c</fullName>
        <description>Geographic region classified as &apos;EMEA&apos;, &apos;APAC&apos;, North America&apos;, and &apos;South America&apos; based on the Contact Mailing Country.</description>
        <formula>IF(CONTAINS(&quot;unclear::unknown::None&quot;, MailingCountry), &quot;Not Defined&quot;,
IF(CONTAINS(&quot;Australia::Hong Kong::Malaysia::New Zealand::Singapore::China::Philippines::India::Nepal::Indonesia::Japan::Cambodia::Pakistan::Bangladesh::Thailand::Viet Nam::Korea::Maldives::Sri Lanka::Afganistan::Russia&quot; , MailingCountry ),&quot;APAC&quot;,
IF(CONTAINS(&quot;Antigua and Barbuda::Barbados::Belize::Canada::Costa Rica::Cuba::Dominica::,Dominican Republic::El Salvador::Grenada::Guatemala::Haiti::Honduras::Jamaica::Mexico::Nicaragua::Panama::Saint Kitts and Nevis::Saint Lucia::Saint Vincent and the Grenadines::The Bahamas::Trinidad and Tobago::United States&quot;, MailingCountry), &quot;North America&quot;,
IF(CONTAINS(&quot;Argentina::Bolivia::Norway::Brazil::Chile::Colombia::Ecuador::Falkland Islands::French Guiana::Guyana::Coat of arms of Paraguay.svg::Peru::South Georgia and the South Sandwich Islands::Suriname::Uruguay::Venezuela&quot;, MailingCountry ), &quot;South America&quot;,
&quot;EMEA&quot;))))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Geographic region based on the Contact Mailing Country.</inlineHelpText>
        <label>Geography</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Integration__c</fullName>
        <description>Created this field for Pardot Grading purpose.</description>
        <formula>TEXT(Account.Integration__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Populates from respective Account. Please edit the account to change it.</inlineHelpText>
        <label>Integration</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>LID__LinkedIn_Company_Id__c</fullName>
        <description>LinkedIn Id of the company</description>
        <label>LinkedIn Company Id</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>LID__LinkedIn_Member_Token__c</fullName>
        <description>LinkedIn Id of the contact</description>
        <label>LinkedIn Member Token</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>LID__No_longer_at_Company__c</fullName>
        <inlineHelpText>Field automatically updated by LinkedIn Sales Navigator Data Validation. “Not at Company” means Contact is not with associated Account based on LinkedIn profile. No value indicates LinkedIn has no feedback to share.</inlineHelpText>
        <label>Not at Company Flag</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Not at Company</fullName>
                </value>
                <value>
                    <fullName>Ignore</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Last_Call_Attempt__c</fullName>
        <inlineHelpText>Date/Time last Outreach.io activity made for Task Type &quot;Call&quot;.</inlineHelpText>
        <label>Last Call Attempt</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Last_Email_Attempt__c</fullName>
        <inlineHelpText>Date/Time last Outreach.io activity made for Task Type &quot;Email&quot;.</inlineHelpText>
        <label>Last Email Attempt</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Last_Form_Fill_Date__c</fullName>
        <description>Date when this prospect last filled out a form from our website or LinkedIn or an ad.</description>
        <inlineHelpText>Date when this prospect last filled out a form</inlineHelpText>
        <label>Last Form Fill Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Lead_Source_Type__c</fullName>
        <label>Lead Source Type</label>
        <type>Picklist</type>
        <valueSet>
            <controllingField>LeadSource</controllingField>
            <valueSetDefinition>
                <sorted>true</sorted>
                <value>
                    <fullName>Accenture</fullName>
                </value>
                <value>
                    <fullName>app.codescan.io</fullName>
                </value>
                <value>
                    <fullName>App Exchange</fullName>
                </value>
                <value>
                    <fullName>AutoRABIT</fullName>
                </value>
                <value>
                    <fullName>Bing Ads</fullName>
                </value>
                <value>
                    <fullName>Bing Search</fullName>
                </value>
                <value>
                    <fullName>Blog</fullName>
                </value>
                <value>
                    <fullName>Calendly</fullName>
                </value>
                <value>
                    <fullName>Call Campaign</fullName>
                </value>
                <value>
                    <fullName>Capterra</fullName>
                </value>
                <value>
                    <fullName>Case Studies</fullName>
                </value>
                <value>
                    <fullName>Chat</fullName>
                </value>
                <value>
                    <fullName>Conference</fullName>
                </value>
                <value>
                    <fullName>Contact Us Form</fullName>
                </value>
                <value>
                    <fullName>Contextual Targeting (ABM)</fullName>
                </value>
                <value>
                    <fullName>Customer</fullName>
                </value>
                <value>
                    <fullName>Customize Targeting (ABM)</fullName>
                </value>
                <value>
                    <fullName>Data.com</fullName>
                </value>
                <value>
                    <fullName>Deloitte</fullName>
                </value>
                <value>
                    <fullName>Demo Request</fullName>
                </value>
                <value>
                    <fullName>Digital Marketing Reference</fullName>
                </value>
                <value>
                    <fullName>Direct</fullName>
                </value>
                <value>
                    <fullName>Direct Mail</fullName>
                </value>
                <value>
                    <fullName>Discord</fullName>
                </value>
                <value>
                    <fullName>Discovery.org</fullName>
                </value>
                <value>
                    <fullName>Display Ad (ABM)</fullName>
                </value>
                <value>
                    <fullName>Display Retarget (ABM)</fullName>
                </value>
                <value>
                    <fullName>Dreamforce</fullName>
                </value>
                <value>
                    <fullName>Dreaming</fullName>
                </value>
                <value>
                    <fullName>Ebook</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Lead_Status_Prior_Converting__c</fullName>
        <label>Lead Status Prior Converting</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>LinkedIn_URL__c</fullName>
        <label>LinkedIn URL</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>Lost_Contact_Status__c</fullName>
        <description>Contact Status when the Contact Stage is set to &quot;Lost&quot; for Lost Reasons other than &apos;Bad Email&apos;, &apos;Bad Phone&apos;, &apos;Bad Email &amp; Bad Phone&apos;, and &apos;Changed Organization&apos;. Created this field for reporting purposes.</description>
        <inlineHelpText>Contact Status when the Contact Stage is set to &quot;Lost&quot; for Lost Reasons other than &apos;Bad Email&apos;, &apos;Bad Phone&apos;, &apos;Bad Email &amp; Bad Phone&apos;, and &apos;Changed Organization&apos;. Created this field for reporting purposes.</inlineHelpText>
        <label>Lost Contact Status</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Lost_Date__c</fullName>
        <description>Date when the Contact Stage is set to &quot;Lost&quot; for Lost Reasons other than &apos;Bad Email&apos;, &apos;Bad Phone&apos;, &apos;Bad Email &amp; Bad Phone&apos;, and &apos;Changed Organization&apos;. Created this field for reporting purposes.</description>
        <inlineHelpText>Date when the Contact Stage is set to &quot;Lost&quot; for Lost Reasons other than &apos;Bad Email&apos;, &apos;Bad Phone&apos;, &apos;Bad Email &amp; Bad Phone&apos;, and &apos;Changed Organization&apos;. Created this field for reporting purposes.</inlineHelpText>
        <label>Lost Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Lost_Reason__c</fullName>
        <label>Lost Reason</label>
        <type>Picklist</type>
        <valueSet>
            <controllingField>Contact_Stage__c</controllingField>
            <restricted>true</restricted>
            <valueSetName>Lost_Reason</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>MA_Notes__c</fullName>
        <description>Additional Information from Market Analysts.</description>
        <inlineHelpText>Additional Information from Market Analysts.</inlineHelpText>
        <label>MA Notes</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>MA_Review_Date__c</fullName>
        <description>Date an MA reviewed the contact for new demographic info</description>
        <inlineHelpText>Date an MA reviewed the contact for new demographic info</inlineHelpText>
        <label>MA Review Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Newcontactfield__c</fullName>
        <label>Newcontactfield</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>No_Longer_with_the_Company__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>Check this box if the contact is no longer with the company.</inlineHelpText>
        <label>No Longer with the Company</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>No_of_CI_CD_users__c</fullName>
        <description>Number of users for CI/CD</description>
        <inlineHelpText>Enter numeric values only.</inlineHelpText>
        <label>No. of CI/CD users</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>No_of_Call_Attempts__c</fullName>
        <defaultValue>0</defaultValue>
        <inlineHelpText>Total number of Outreach.io activities made for Task Type &quot;Call&quot;.</inlineHelpText>
        <label>No. of Call Attempts</label>
        <precision>6</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>No_of_Email_Attempts__c</fullName>
        <defaultValue>0</defaultValue>
        <inlineHelpText>Total number of Outreach.io activities made for Task Type &quot;Email&quot;.</inlineHelpText>
        <label>No. of Email Attempts</label>
        <precision>6</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>No_of_Vault_users__c</fullName>
        <description>Number of users for Vault.</description>
        <inlineHelpText>Please enter numeric value only.</inlineHelpText>
        <label>No. of Vault users</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Nurture_Program__c</fullName>
        <label>Nurture Program</label>
        <type>Picklist</type>
        <valueSet>
            <controllingField>Contact_Stage__c</controllingField>
            <restricted>true</restricted>
            <valueSetName>Nurture_Program</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>OptIn_Legal__c</fullName>
        <label>Opt_Legal</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Opt_Events__c</fullName>
        <label>OptIn Events</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Opt_Newsletter__c</fullName>
        <label>OptIn Newsletter</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Opt_Other_Products__c</fullName>
        <label>OptIn Other Products</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
</CustomObject>